# meso

./: Cargo.toml  LICENSE  README.md  styles.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
